# nousergon-data

./: .env.example  .gitignore  .gitleaks-baseline.json  Dockerfile  NOTICE  OVERVIEW.md  README.md  WAVE4_SLIM_DELETION_RUNBOOK.md  config.yaml.example  dates.py  emailer.py  flow-doctor.yaml  flow-doctor.yaml.example  polygon_client.py  preflight.py  pyproject.toml  requirements-daily-news.txt  requirements.txt  sf_preflight.py  split_factor.py  weekly_collector.py
.github/: pip-audit-ignore.txt  pull_request_template.md
builders/: _constituents_loader.py  _price_cache_writeboth.py  backfill.py  backfill_delisted_history.py  daily_append.py  migrate_universe_crsp_basis.py  migrate_universe_feature_order.py  prune_delisted_tickers.py  purge_phantom_day.py  register_and_restate.py  splice_rebase.py
collectors/: alternative.py  constituents.py  cross_source_observer.py  crypto_balances.py  daily_closes.py  daily_closes_fred_repair.py  daily_news.py  finnhub_client.py  fred_history.py  fundamentals.py  historical_constituents.py  macro.py  metron_market_data.py  news_aggregator.py  news_aggregator_async.py  prices.py  short_interest.py  signal_returns.py  slim_cache.py  topic_news.py  universe_classification.py  universe_returns.py  yfinance_quiet.py
contracts/: __init__.py  signals.schema.json
corporate_actions/: __init__.py  _split_math.py  registry.py
data/: cache.py
features/: SCHEMA.md  compute.py  cross_sectional.py  factor_momentum.py  feature_engineer.py  gen_schema_md.py  metron_supplemental.py  private_pack.py  registry.py
infrastructure/: README.md  (+28 more)
(+691 files in other folders)
